Adapted the app configuration for a servlet container

--- a/webapp/app/home/Home.css
+++ b/webapp/app/home/Home.css
@@ -1,5 +1,5 @@
 .background-home {
-    background-image: url('/images/home-background.jpg');
+    background-image: url('images/home-background.jpg');
     background-size: cover;
     position: absolute;
     top: 0;
